--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
     </footer>
 
     <div>
-      <a class="wa-me" href=""
+      <a class="wa-me" href=" https://wa.me/6281243827522"
         ><img
           style="width: 3rem; border-radius: 100%; object-fit: cover"
           src="icons/wa.png"
